<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="38dp">

        <TextView
            android:text="@string/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tv1"
            android:layout_weight="1" />
        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <RadioButton
                android:text="放大"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/rbAmplification"
                android:layout_weight="1" />

            <RadioButton
                android:text="缩小"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/rbNarrow"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <TextView
            android:text="@string/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv2"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <RadioButton
                android:text="图一"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/rbPc1"
                android:layout_weight="1" />

            <RadioButton
                android:text="图二"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/rbPc2"
                android:layout_weight="1" />

            <RadioButton
                android:text="图三"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/rbPc3"
                android:layout_weight="1" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:src="@drawable/pc1"
            android:id="@+id/imageView" />

        <ImageView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:src="@drawable/pc2"
            android:id="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/pc3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnNextPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnext"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <Button
            android:text="确定"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btSure"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="1" />

        <Button
            android:text="重置"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/btReset"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pc1"
            android:id="@+id/ivResult"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>

